# HexxGame

./: .gitignore  CMakeLists.txt  README.md
saves/: 2024-02-26_16-11-35.txt  2024-02-27_16-08-51.txt  2024-03-07_19-05-55.txt  2024-03-09_22-52-38.txt  2024-03-09_23-47-41.txt  2024-03-12_22-09-20.txt  2024-03-13_21-44-49.txt  2024-03-23_01-51-33.txt  2024-03-23_02-03-07.txt  2024-03-23_02-05-48.txt  2024-03-23_13-59-59.txt  2024-03-23_14-10-42.txt  2024-03-23_14-18-25.txt
source/: Application.cpp  Application.h  Bot.cpp  Bot.h  Game.cpp  Game.h  HexBoard.cpp  HexBoard.h  Menu.cpp  Menu.h  MenuHandler.cpp  MenuHandler.h  Player.cpp  Player.h  StoneHelper.cpp  StoneHelper.h  main.cpp
source/ui/: Button.cpp  Button.h  ButtonGenerator.cpp  ButtonGenerator.h
